parser/y.output

0: shift/reduce conflict (shift 5(0), red'n 177(0)) on ';'
0: shift/reduce conflict (shift 8(0), red'n 177(0)) on '\n'
state 0
	$accept: .compstmt $end 
	opt_term: .    (177)

	';'  shift 5
	'\n'  shift 8
	.  reduce 177 (src line 1148)

	compstmt  goto 1
	stmts  goto 3
	opt_term  goto 2
	term  goto 4
	newlines  goto 6
	newline  goto 7

state 1
	$accept:  compstmt.$end 

	$end  accept
	.  error


 2: reduce/reduce conflict  (red'ns 1 and 5) on $end
 2: reduce/reduce conflict  (red'ns 1 and 5) on CASE
 2: reduce/reduce conflict  (red'ns 1 and 5) on DEFAULT
 2: reduce/reduce conflict  (red'ns 1 and 5) on '}'
 2: reduce/reduce conflict  (red'ns 1 and 5) on '\n'
state 2
	compstmt:  opt_term.    (1)
	stmts:  opt_term.stmt 
	stmt: .    (5)
	exprs: .    (63)

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	RETURN  shift 13
	VAR  shift 49
	THROW  shift 14
	IF  shift 27
	FOR  shift 28
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MODULE  shift 15
	TRY  shift 16
	BREAK  shift 11
	CONTINUE  shift 12
	SWITCH  shift 29
	GO  shift 17
	MAKE  shift 41
	OPCHAN  shift 58
	EQOPCHAN  reduce 63 (src line 497)
	LEN  shift 39
	DELETE  shift 18
	CLOSE  shift 19
	MAP  shift 42
	IMPORT  shift 30
	AS  reduce 63 (src line 497)
	'='  reduce 63 (src line 497)
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 36
	','  reduce 63 (src line 497)
	';'  reduce 5 (src line 143)
	'['  shift 34
	'!'  shift 59
	.  reduce 1 (src line 108)

	stmt  goto 9
	stmt_var_or_lets  goto 10
	stmt_import  goto 23
	stmt_var  goto 25
	stmt_lets  goto 26
	stmt_if  goto 20
	stmt_for  goto 21
	stmt_switch  goto 22
	exprs  goto 50
	expr  goto 24
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

3: shift/reduce conflict (shift 8(0), red'n 177(0)) on '\n'
state 3
	compstmt:  stmts.opt_term 
	stmts:  stmts.term stmt 
	opt_term: .    (177)

	';'  shift 5
	'\n'  shift 8
	.  reduce 177 (src line 1148)

	opt_term  goto 67
	term  goto 68
	newlines  goto 6
	newline  goto 7

state 4
	opt_term:  term.    (178)

	.  reduce 178 (src line 1150)


5: shift/reduce conflict (shift 8(0), red'n 181(0)) on '\n'
state 5
	term:  ';'.newlines 
	term:  ';'.    (181)

	'\n'  shift 8
	.  reduce 181 (src line 1155)

	newlines  goto 69
	newline  goto 7

6: shift/reduce conflict (shift 8(0), red'n 180(0)) on '\n'
state 6
	term:  newlines.    (180)
	newlines:  newlines.newline 

	'\n'  shift 8
	.  reduce 180 (src line 1154)

	newline  goto 70

state 7
	newlines:  newline.    (184)

	.  reduce 184 (src line 1161)


state 8
	newline:  '\n'.    (186)

	.  reduce 186 (src line 1165)


state 9
	stmts:  opt_term stmt.    (3)

	.  reduce 3 (src line 118)


state 10
	stmt:  stmt_var_or_lets.    (6)

	.  reduce 6 (src line 148)


state 11
	stmt:  BREAK.    (7)

	.  reduce 7 (src line 152)


state 12
	stmt:  CONTINUE.    (8)

	.  reduce 8 (src line 157)


state 13
	stmt:  RETURN.exprs 
	exprs: .    (63)

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  reduce 63 (src line 497)

	exprs  goto 71
	expr  goto 72
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 14
	stmt:  THROW.expr 

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 74
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 15
	stmt:  MODULE.IDENT '{' compstmt '}' 

	IDENT  shift 75
	.  error


state 16
	stmt:  TRY.'{' compstmt '}' CATCH IDENT '{' compstmt '}' FINALLY '{' compstmt '}' 
	stmt:  TRY.'{' compstmt '}' CATCH '{' compstmt '}' FINALLY '{' compstmt '}' 
	stmt:  TRY.'{' compstmt '}' CATCH IDENT '{' compstmt '}' 
	stmt:  TRY.'{' compstmt '}' CATCH '{' compstmt '}' 

	'{'  shift 76
	.  error


state 17
	stmt:  GO.IDENT '(' exprs VARARG ')' 
	stmt:  GO.IDENT '(' exprs ')' 
	stmt:  GO.expr '(' exprs VARARG ')' 
	stmt:  GO.expr '(' exprs ')' 

	IDENT  shift 77
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 78
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 18
	stmt:  DELETE.'(' expr ')' 
	stmt:  DELETE.'(' expr ',' expr ')' 

	'('  shift 79
	.  error


state 19
	stmt:  CLOSE.'(' expr ')' 

	'('  shift 80
	.  error


state 20
	stmt:  stmt_if.    (23)
	stmt_if:  stmt_if.ELSE IF expr '{' compstmt '}' 
	stmt_if:  stmt_if.ELSE '{' compstmt '}' 

	ELSE  shift 81
	.  reduce 23 (src line 232)


state 21
	stmt:  stmt_for.    (24)

	.  reduce 24 (src line 236)


state 22
	stmt:  stmt_switch.    (25)

	.  reduce 25 (src line 240)


state 23
	stmt:  stmt_import.    (26)

	.  reduce 26 (src line 244)


24: shift/reduce conflict (shift 83(2), red'n 64(0)) on EQOPCHAN
24: shift/reduce conflict (shift 82(2), red'n 64(0)) on '='
state 24
	stmt:  expr.    (27)
	stmt_lets:  expr.'=' expr 
	stmt_lets:  expr.EQOPCHAN expr 
	exprs:  expr.    (64)
	expr:  expr.'?' expr ':' expr 
	expr:  expr.NILCOALESCE expr 
	expr:  expr.'(' exprs VARARG ')' 
	expr:  expr.'(' exprs VARARG ')' '?' 
	expr:  expr.'(' exprs ')' 
	expr:  expr.'(' exprs ')' '?' 
	expr:  expr.'[' expr ']' 
	expr:  expr.IN expr 
	expr_member:  expr.'.' IDENT 
	expr_slice:  expr.'[' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' ']' 
	expr_slice:  expr.'[' ':' expr ']' 
	expr_slice:  expr.'[' ':' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' expr ':' expr ']' 
	expr_chan:  expr.OPCHAN expr 
	expr_lets:  expr.PLUSPLUS 
	expr_lets:  expr.MINUSMINUS 
	expr_lets:  expr.PLUSEQ expr 
	expr_lets:  expr.MINUSEQ expr 
	expr_lets:  expr.OREQ expr 
	expr_lets:  expr.MULEQ expr 
	expr_lets:  expr.DIVEQ expr 
	expr_lets:  expr.ANDEQ expr 
	op_multiply:  expr.'*' expr 
	op_multiply:  expr.'/' expr 
	op_multiply:  expr.'%' expr 
	op_multiply:  expr.SHIFTLEFT expr 
	op_multiply:  expr.SHIFTRIGHT expr 
	op_multiply:  expr.'&' expr 
	op_add:  expr.'+' expr 
	op_add:  expr.'-' expr 
	op_add:  expr.'|' expr 
	op_comparison:  expr.EQEQ expr 
	op_comparison:  expr.NEQ expr 
	op_comparison:  expr.'<' expr 
	op_comparison:  expr.LE expr 
	op_comparison:  expr.'>' expr 
	op_comparison:  expr.GE expr 
	op_binary:  expr.ANDAND expr 
	op_binary:  expr.OROR expr 

	IN  shift 88
	EQEQ  shift 108
	NEQ  shift 109
	GE  shift 113
	LE  shift 111
	OROR  shift 115
	ANDAND  shift 114
	NILCOALESCE  shift 85
	PLUSEQ  shift 93
	MINUSEQ  shift 94
	MULEQ  shift 96
	DIVEQ  shift 97
	ANDEQ  shift 98
	OREQ  shift 95
	PLUSPLUS  shift 91
	MINUSMINUS  shift 92
	SHIFTLEFT  shift 102
	SHIFTRIGHT  shift 103
	OPCHAN  shift 90
	EQOPCHAN  shift 83
	AS  reduce 64 (src line 502)
	'='  shift 82
	'?'  shift 84
	'<'  shift 110
	'>'  shift 112
	'+'  shift 105
	'-'  shift 106
	'|'  shift 107
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'&'  shift 104
	'('  shift 86
	','  reduce 64 (src line 502)
	'['  shift 87
	'.'  shift 89
	.  reduce 27 (src line 248)


state 25
	stmt_var_or_lets:  stmt_var.    (28)

	.  reduce 28 (src line 254)


state 26
	stmt_var_or_lets:  stmt_lets.    (29)

	.  reduce 29 (src line 259)


state 27
	stmt_if:  IF.expr '{' compstmt '}' 

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 116
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

 28: reduce/reduce conflict  (red'ns 104 and 63) on ','
state 28
	stmt_for:  FOR.'{' compstmt '}' 
	stmt_for:  FOR.expr_idents IN expr '{' compstmt '}' 
	stmt_for:  FOR.expr '{' compstmt '}' 
	stmt_for:  FOR.';' ';' '{' compstmt '}' 
	stmt_for:  FOR.';' ';' expr '{' compstmt '}' 
	stmt_for:  FOR.';' expr ';' '{' compstmt '}' 
	stmt_for:  FOR.';' expr ';' expr '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' ';' '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' ';' expr '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' expr ';' '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' expr ';' expr '{' compstmt '}' 
	expr_idents: .    (104)
	exprs: .    (63)

	IDENT  shift 122
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	VAR  shift 49
	IN  reduce 104 (src line 703)
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 117
	'('  shift 36
	';'  shift 120
	'['  shift 34
	'!'  shift 59
	.  reduce 63 (src line 497)

	stmt_var_or_lets  goto 121
	stmt_var  goto 25
	stmt_lets  goto 26
	exprs  goto 50
	expr  goto 119
	expr_idents  goto 118
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 29
	stmt_switch:  SWITCH.expr '{' opt_newlines stmt_switch_cases opt_newlines '}' 

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 123
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 30
	stmt_import:  IMPORT.expr 
	stmt_import:  IMPORT.expr AS IDENT 

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 124
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 31
	expr:  expr_member_or_ident.    (67)

	.  reduce 67 (src line 523)


state 32
	expr:  expr_literals.    (68)

	.  reduce 68 (src line 528)


state 33
	expr:  FUNC.'(' expr_idents ')' '{' compstmt '}' 
	expr:  FUNC.'(' expr_idents VARARG ')' '{' compstmt '}' 
	expr:  FUNC.IDENT '(' expr_idents ')' '{' compstmt '}' 
	expr:  FUNC.IDENT '(' expr_idents VARARG ')' '{' compstmt '}' 

	IDENT  shift 126
	'('  shift 125
	.  error


34: shift/reduce conflict (shift 127(0), red'n 182(0)) on ']'
34: shift/reduce conflict (shift 8(0), red'n 182(0)) on '\n'
state 34
	expr:  '['.']' 
	expr:  '['.opt_newlines exprs opt_comma_newlines ']' 
	slice_count:  '['.']' 
	slice_count:  '['.']' slice_count 
	opt_newlines: .    (182)

	']'  shift 127
	'\n'  shift 8
	.  reduce 182 (src line 1157)

	opt_newlines  goto 128
	newlines  goto 129
	newline  goto 7

state 35
	expr:  slice_count.type_data '{' opt_newlines exprs opt_comma_newlines '}' 

	IDENT  shift 131
	CHAN  shift 135
	STRUCT  shift 136
	MAP  shift 134
	'*'  shift 132
	'['  shift 137
	.  error

	type_data  goto 130
	slice_count  goto 133

state 36
	stmt_lets:  '('.expr_idents ')' '=' exprs 
	expr:  '('.expr ')' 
	expr_idents: .    (104)

	IDENT  shift 122
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  reduce 104 (src line 703)

	expr  goto 139
	expr_idents  goto 138
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

37: shift/reduce conflict (shift 140(0), red'n 121(0)) on '('
state 37
	expr:  IDENT.'(' exprs VARARG ')' 
	expr:  IDENT.'(' exprs VARARG ')' '?' 
	expr:  IDENT.'(' exprs ')' 
	expr:  IDENT.'(' exprs ')' '?' 
	expr_ident:  IDENT.    (121)

	'('  shift 140
	.  reduce 121 (src line 818)


38: shift/reduce conflict (shift 141(0), red'n 119(0)) on '['
state 38
	expr:  expr_ident.'[' expr ']' 
	expr_member_or_ident:  expr_ident.    (119)
	expr_slice:  expr_ident.'[' expr ':' expr ']' 
	expr_slice:  expr_ident.'[' expr ':' ']' 
	expr_slice:  expr_ident.'[' ':' expr ']' 
	expr_slice:  expr_ident.'[' ':' expr ':' expr ']' 
	expr_slice:  expr_ident.'[' expr ':' expr ':' expr ']' 

	'['  shift 141
	.  reduce 119 (src line 806)


state 39
	expr:  LEN.'(' expr ')' 

	'('  shift 142
	.  error


state 40
	expr:  NEW.'(' type_data ')' 

	'('  shift 143
	.  error


state 41
	expr:  MAKE.'(' type_data ')' 
	expr:  MAKE.'(' type_data ',' expr ')' 
	expr:  MAKE.'(' type_data ',' expr ',' expr ')' 
	expr:  MAKE.'(' TYPE IDENT ',' expr ')' 

	'('  shift 144
	.  error


state 42
	expr:  MAP.'{' opt_newlines expr_map opt_comma_newlines '}' 
	expr:  MAP.'[' type_data ']' type_data '{' opt_newlines expr_map opt_comma_newlines '}' 

	'{'  shift 145
	'['  shift 146
	.  error


43: shift/reduce conflict (shift 8(0), red'n 182(0)) on '\n'
state 43
	expr:  '{'.opt_newlines expr_map opt_comma_newlines '}' 
	opt_newlines: .    (182)

	'\n'  shift 8
	.  reduce 182 (src line 1157)

	opt_newlines  goto 147
	newlines  goto 129
	newline  goto 7

state 44
	expr:  expr_slice.    (99)

	.  reduce 99 (src line 689)


state 45
	expr:  expr_chan.    (100)

	.  reduce 100 (src line 694)


state 46
	expr:  expr_unary.    (101)

	.  reduce 101 (src line 699)


state 47
	expr:  expr_binary.    (102)

	.  reduce 102 (src line 700)


state 48
	expr:  expr_lets.    (103)

	.  reduce 103 (src line 701)


state 49
	stmt_var:  VAR.expr_idents '=' exprs 
	expr_idents: .    (104)

	IDENT  shift 149
	.  reduce 104 (src line 703)

	expr_idents  goto 148

state 50
	stmt_lets:  exprs.'=' exprs 
	stmt_lets:  exprs.AS '(' expr_idents ')' 
	stmt_lets:  exprs.AS exprs 
	stmt_lets:  exprs.EQOPCHAN expr 
	exprs:  exprs.',' opt_newlines expr 
	exprs:  exprs.',' opt_newlines expr_ident 

	EQOPCHAN  shift 152
	AS  shift 151
	'='  shift 150
	','  shift 153
	.  error


state 51
	expr_member_or_ident:  expr_member.    (118)

	.  reduce 118 (src line 801)


state 52
	expr_literals:  '-'.NUMBER 
	expr_unary:  '-'.expr 

	IDENT  shift 37
	NUMBER  shift 154
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 155
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 53
	expr_literals:  NUMBER.    (123)

	.  reduce 123 (src line 836)


state 54
	expr_literals:  STRING.    (124)

	.  reduce 124 (src line 846)


state 55
	expr_literals:  TRUE.    (125)

	.  reduce 125 (src line 851)


state 56
	expr_literals:  FALSE.    (126)

	.  reduce 126 (src line 856)


state 57
	expr_literals:  NIL.    (127)

	.  reduce 127 (src line 861)


state 58
	expr_chan:  OPCHAN.expr 

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 156
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 59
	expr_unary:  '!'.expr 

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 157
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 60
	expr_unary:  '^'.expr 

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 158
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 61
	expr_unary:  '&'.expr 

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 159
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 62
	expr_unary:  '*'.expr 

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MAKE  shift 41
	OPCHAN  shift 58
	LEN  shift 39
	MAP  shift 42
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 73
	'['  shift 34
	'!'  shift 59
	.  error

	expr  goto 160
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

state 63
	expr_binary:  op_multiply.    (148)

	.  reduce 148 (src line 965)


state 64
	expr_binary:  op_add.    (149)

	.  reduce 149 (src line 971)


state 65
	expr_binary:  op_comparison.    (150)

	.  reduce 150 (src line 976)


state 66
	expr_binary:  op_binary.    (151)

	.  reduce 151 (src line 981)


state 67
	compstmt:  stmts opt_term.    (2)

	.  reduce 2 (src line 113)


 68: reduce/reduce conflict  (red'ns 178 and 5) on $end
 68: reduce/reduce conflict  (red'ns 178 and 5) on CASE
 68: reduce/reduce conflict  (red'ns 178 and 5) on DEFAULT
 68: reduce/reduce conflict  (red'ns 178 and 5) on '}'
 68: reduce/reduce conflict  (red'ns 178 and 5) on '\n'
state 68
	stmts:  stmts term.stmt 
	opt_term:  term.    (178)
	stmt: .    (5)
	exprs: .    (63)

	IDENT  shift 37
	NUMBER  shift 53
	STRING  shift 54
	FUNC  shift 33
	RETURN  shift 13
	VAR  shift 49
	THROW  shift 14
	IF  shift 27
	FOR  shift 28
	NEW  shift 40
	TRUE  shift 55
	FALSE  shift 56
	NIL  shift 57
	MODULE  shift 15
	TRY  shift 16
	BREAK  shift 11
	CONTINUE  shift 12
	SWITCH  shift 29
	GO  shift 17
	MAKE  shift 41
	OPCHAN  shift 58
	EQOPCHAN  reduce 63 (src line 497)
	LEN  shift 39
	DELETE  shift 18
	CLOSE  shift 19
	MAP  shift 42
	IMPORT  shift 30
	AS  reduce 63 (src line 497)
	'='  reduce 63 (src line 497)
	'-'  shift 52
	'^'  shift 60
	'*'  shift 62
	'&'  shift 61
	'{'  shift 43
	'('  shift 36
	','  reduce 63 (src line 497)
	'['  shift 34
	'!'  shift 59
	.  reduce 5 (src line 143)

	stmt  goto 161
	stmt_var_or_lets  goto 10
	stmt_import  goto 23
	stmt_var  goto 25
	stmt_lets  goto 26
	stmt_if  goto 20
	stmt_for  goto 21
	stmt_switch  goto 22
	exprs  goto 50
	expr  goto 24
	slice_count  goto 35
	expr_member_or_ident  goto 31
	expr_member  goto 51
	expr_ident  goto 38
	expr_literals  goto 32
	expr_slice  goto 44
	expr_chan  goto 45
	expr_unary  goto 46
	expr_binary  goto 47
	expr_lets  goto 48
	op_binary  goto 66
	op_comparison  goto 65
	op_add  goto 64
	op_multiply  goto 63

69: shift/reduce conflict (shift 8(0), red'n 179(0)) on '\n'
state 69
	term:  ';' newlines.    (179)
	newlines:  newlines.newline 

	'\n'  shift 8
	.  reduce 179 (src line 1152)

	newline  goto 70

state 70
	newlines:  newlines newline.    (185)

	.  reduce 185 (src line 1163)


state 71
	stmt:  RETURN exprs.    (9)
	exprs:  exprs.',' opt_newlines expr 
	exprs:  exprs.',' opt_newlines expr_ident 

	','  shift 153
	.  reduce 9 (src line 162)

